--- a/nuxtjs_frontend/package.json
+++ b/nuxtjs_frontend/package.json
@@ -13,8 +13,8 @@
     "@nuxt/image": "1.9.0",
     "@nuxtjs/google-fonts": "3.2.0",
     "@tailwindcss/vite": "^4.0.8",
-    "@tanstack/vue-query": "^5.66.9",
     "axios": "^1.7.9",
+    "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.8",
