--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,25 @@
 {
-  "name": "booktok",
+  "name": "nuxt-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.0",
+    "@nuxt/image": "1.9.0",
+    "@nuxtjs/google-fonts": "3.2.0",
+    "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "styled-components": "^6.1.14",
-    "swiper": "^11.2.2"
+    "gsap": "^3.12.7",
+    "nuxt": "^3.15.4",
+    "swiper": "^11.2.4",
+    "tailwindcss": "^4.0.8",
+    "vue": "latest",
+    "vue-router": "latest"
   },
-  "devDependencies": {
-    "prettier": "^3.1.1",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.13.1",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
-  }
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
