--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@nuxtjs/google-fonts": "3.2.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
     "swiper": "^11.2.4",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "vue": "latest",
     "vue-router": "latest"
