--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@nuxt/image": "1.9.0",
     "@nuxtjs/google-fonts": "3.2.0",
+    "@pinia/nuxt": "0.10.1",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
+    "pinia": "^3.0.1",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
